[project]
name = "gn"
version = "0.1.0"
description = "GeekNews (긱뉴스) CLI"
requires-python = ">=3.11"
dependencies = [
    "click>=8.0",
]

[project.scripts]
gn = "gn.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/gn"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
